Split Preference views into 3 different views. Added MobileLibraryBrowserView/Presenter. A lot of modifications to the NavigationManager to support Android and other mobile devices.
Related to issue #406.


git-svn-id: http://hamster-svn/svn/repos/base@692 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/branches/current/MPfm.Android/MPfm.Android.csproj
@@ -65,12 +65,13 @@
     <Compile Include="Classes\Adapters\GenericListAdapter.cs" />
     <Compile Include="Classes\Application.cs" />
     <Compile Include="Classes\AndroidNavigationManager.cs" />
-    <Compile Include="Classes\Fragments\BaseFragment.cs" />
+    <Compile Include="Classes\Fragments\Base\BaseFragment.cs" />
     <Compile Include="Classes\Fragments\AudioPreferencesFragment.cs" />
+    <Compile Include="Classes\Fragments\Base\BaseListFragment.cs" />
     <Compile Include="Classes\Fragments\LibraryPreferencesFragment.cs" />
     <Compile Include="Classes\Fragments\GeneralPreferencesFragment.cs" />
     <Compile Include="Classes\Fragments\UpdateLibraryFragment.cs" />
-    <Compile Include="Classes\Fragments\GenericListFragment.cs" />
+    <Compile Include="Classes\Fragments\MobileLibraryBrowserFragment.cs" />
     <Compile Include="Classes\Fragments\PlayerFragment.cs" />
     <Compile Include="Classes\Helpers\BitmapHelper.cs" />
     <Compile Include="Classes\Helpers\BitmapCache.cs" />
