Updated NavigationManager for Android. Now adds tabs dynamically! Also split NavigationManager to MobileNavigationManager.
Related to issue #406.


git-svn-id: http://hamster-svn/svn/repos/base@693 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.Android/MPfm.Android.csproj
+++ b/MPfm/branches/current/MPfm.Android/MPfm.Android.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Classes\Fragments\Base\BaseFragment.cs" />
     <Compile Include="Classes\Fragments\AudioPreferencesFragment.cs" />
     <Compile Include="Classes\Fragments\Base\BaseListFragment.cs" />
+    <Compile Include="Classes\Fragments\Base\BaseDialogFragment.cs" />
+    <Compile Include="Classes\Fragments\SplashFragment.cs" />
     <Compile Include="Classes\Fragments\LibraryPreferencesFragment.cs" />
     <Compile Include="Classes\Fragments\GeneralPreferencesFragment.cs" />
     <Compile Include="Classes\Fragments\UpdateLibraryFragment.cs" />
