Resynchronization of project files.
git-svn-id: http://hamster-svn/svn/repos/base@698 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/MPfm/branches/current/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/branches/current/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -184,6 +184,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Navigation\MobileNavigationManager.cs" />
     <Compile Include="Presenters\AudioPreferencesPresenter.cs" />
     <Compile Include="Presenters\MobileLibraryBrowserPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IMobileLibraryBrowserPresenter.cs" />
@@ -263,6 +264,6 @@
     <Compile Include="ViewModels\LibraryBrowserViewModel.cs" />
     <Compile Include="Presenters\Interfaces\IMainPresenter.cs" />
     <Compile Include="Presenters\MainPresenter.cs" />
-    <Compile Include="NavigationManager.cs" />
+    <Compile Include="Navigation\NavigationManager.cs" />
   </ItemGroup>
 </Project>
