ProjectSync: Added --refresh option to manually refresh project files and skip watching the solution file. Added Readme for GitHub. Moved a method from Main to ProjectFileWriter.cs.
git-svn-id: http://hamster-svn/svn/repos/base@699 765c1f7c-9fb8-954f-9ff8-dd0915cb3117

--- a/ProjectSync/ProjectSync.csproj
+++ b/ProjectSync/ProjectSync.csproj
@@ -37,10 +37,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProjectFileWriter.cs" />
     <Compile Include="ProjectFileReader.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="SolutionFileReader.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
