Re-added System.Reactive to MPfm.Sound (dependency will be removed soon). Updated MPfm.Windows project/solution files with new MPfm.Windows namespace (didn't update the namespaces in source files yet)

--- a/MPfm/MPfm.Sound/MPfm.Sound.csproj
+++ b/MPfm/MPfm.Sound/MPfm.Sound.csproj
@@ -90,6 +90,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Lib\System.Reactive.dll" />
     <Content Include="Lib\taglib-sharp.dll" />
   </ItemGroup>
   <ItemGroup>
