Updated GTK Linux project after namespace and NavigationManager changes. Fixed SplashPresenter for Linux.
Related to issue #404.

--- a/MPfm/MPfm.GTK/MPfm.GTK.csproj
+++ b/MPfm/MPfm.GTK/MPfm.GTK.csproj
@@ -169,6 +169,8 @@
       <DeployService-UseProjectRelativePath>True</DeployService-UseProjectRelativePath>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Splash.png" />
+    <Content Include="Splash.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
