--- a/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -105,6 +105,7 @@
   </ProjectExtensions>
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Messages\AudioFileCacheUpdatedMessage.cs" />
     <Compile Include="Messages\MobileLibraryBrowserItemClickedMessage.cs" />
     <Compile Include="Navigation\MobileNavigationManager.cs" />
     <Compile Include="Presenters\AudioPreferencesPresenter.cs" />
